--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,4 @@ include README.rst
 include LICENSE
 include MANIFEST.in
 include setup.py
-recursive-include zapi *.py
+recursive-include ludolph_zabbix *.py
